--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  function_tree: ^0.5.0
 
 dev_dependencies:
   flutter_test:
@@ -40,9 +41,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   fonts:
-    - family: PTSans
+    - family: Google
       fonts:
-       - asset: assets/fonts/ptsans.ttf
+       - asset: assets/fonts/google.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
