--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  function_tree: ^0.5.0
+  # function_tree: ^0.5.0
 
 dev_dependencies:
   flutter_test:
