--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   function_tree: ^0.5.0
+  sliding_up_panel: ^1.0.2
+  shared_preferences: ^0.5.7+3
+  camera: ^0.5.8+2
+  path_provider: ^1.6.11
+  path: ^1.7.0
 
 dev_dependencies:
   flutter_test:
