--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -24,11 +24,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   function_tree: ^0.5.0
-  sliding_up_panel: ^1.0.2
   sqflite: ^1.3.1
-  camera: ^0.5.8+2
   path_provider: ^1.6.11
   path: ^1.7.0
+  http: ^0.12.1
+  convert: ^2.1.1
+  line_icons: ^0.2.0
+  google_nav_bar: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +51,9 @@ flutter:
     - family: Google
       fonts:
        - asset: assets/fonts/google.ttf
+    - family: Graphik
+      fonts:
+       - asset: assets/fonts/graphik.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
