--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   convert: ^2.1.1
   line_icons: ^0.2.0
   google_nav_bar: ^2.2.0
+  shared_preferences: ^0.5.7+3
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
