--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,11 @@ dependencies:
   google_nav_bar: ^2.2.0
   shared_preferences: ^0.5.7+3
   intl: ^0.16.1
-  bottom_bar_page_transition: ^1.0.2
+  pdf: ^1.9.0
+  qr_flutter: ^3.2.0
+  share_extend: ^1.1.9
+  flutter_barcode_scanner: ^0.0.9
+  flutter_linkify: ^1.0.3
 
 dev_dependencies:
   flutter_test:
